feat: Enhance UI with cell selection highlighting and improved styling

--- a/webroot/page.html
+++ b/webroot/page.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     <div id="game-container">
-        <p id="hint"></p>
+        <h1>Word Connection Puzzle</h1>
+        <div class="game-instructions">
+            <p>Find words that are related to: </p>
+            <p id="hint"></p>
+        </div>
         <p id="message"></p>
         <div id="grid"></div>
-        <button id="checkAnswer">Confirm</button>
+        <button id="checkAnswer">Confirm Selection</button>
     </div>
     <script type="application/javascript" src="script.js"></script>
 </body>
