implement user count for each word

--- a/webroot/page.html
+++ b/webroot/page.html
@@ -8,12 +8,8 @@
 </head>
 <body>
     <div id="game-container">
-        <!-- <h1>Word Connection Puzzle</h1>
-        <div class="game-instructions">
-            <p>Find words that are related to: </p> -->
-            <p id="hint"></p>
-        <!-- </div> -->
-        <p id="message"></p>
+        <p id="hint"></p>
+        <!-- <p id="message"></p> -->
         <div id="grid"></div>
         <button id="checkAnswer">Confirm Selection</button>
     </div>
