refactor: Replace hint paragraph with story paragraph in HTML

--- a/webroot/page.html
+++ b/webroot/page.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="game-container">
-        <p id="hint"></p>
+        <p id="story"></p>
         <!-- <p id="message"></p> -->
         <div id="grid"></div>
         <button id="checkAnswer">Confirm Selection</button>
