--- a/webroot/page.html
+++ b/webroot/page.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="game-container">
+        <textarea id="storyInput" placeholder="Start or continue the story..."></textarea>
         <p id="story"></p>
         <!-- <p id="message"></p> -->
         <div id="grid"></div>
