feat: Add game round display with enhanced styling and visibility

--- a/webroot/page.html
+++ b/webroot/page.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div id="game-container">
+        <div id="game-round-container">
+            <div id="game-round" class="game-round">Round: 1</div>
+        </div>
         <p id="story"></p>
         <div id="grid"></div>
         <button id="checkAnswer">Confirm Selection</button>
