--- a/webroot/page.html
+++ b/webroot/page.html
@@ -16,5 +16,41 @@
         <button id="checkAnswer">Confirm Selection</button>
     </div>
     <script type="application/javascript" src="script.js"></script>
+  <style>
+    .story-completed-content {
+      background-color: white;
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+      max-width: 80%;
+      max-height: 80%;
+      overflow: auto;
+    }
+
+    .story-completed-content h1 {
+      color: #333;
+      margin-bottom: 15px;
+    }
+
+    .story-completed-content #final-story-text {
+      font-size: 18px;
+      line-height: 1.6;
+      margin-bottom: 20px;
+    }
+
+    .story-completed-content #restart-game {
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+  </style>
 </body>
 </html>
