feat: Add countdown timer to show remaining time for word selection

--- a/webroot/page.html
+++ b/webroot/page.html
@@ -10,6 +10,7 @@
     <div id="game-container">
         <div id="game-round-container">
             <div id="game-round" class="game-round">Round: 1</div>
+            <div id="countdown-timer" class="countdown-timer">30</div>
         </div>
         <p id="story"></p>
         <div id="grid"></div>
