feat: Add countdown timer style to page.html

--- a/webroot/page.html
+++ b/webroot/page.html
@@ -18,6 +18,14 @@
     </div>
     <script type="application/javascript" src="script.js"></script>
   <style>
+    .countdown-timer {
+      font-size: 24px;
+      color: #ff4500;
+      font-weight: bold;
+      text-align: right;
+      margin-left: 10px;
+    }
+
     .story-completed-content {
       background-color: white;
       padding: 20px;
