--- a/webroot/page.html
+++ b/webroot/page.html
@@ -26,6 +26,33 @@
       margin-left: 10px;
     }
 
+    .game-over-content {
+      background-color: rgba(0,0,0,0.9);
+      color: white;
+      padding: 30px;
+      border-radius: 15px;
+      text-align: center;
+      max-width: 80%;
+      max-height: 80%;
+      overflow: auto;
+    }
+
+    .game-over-content h1 {
+      color: #ff6347;
+      margin-bottom: 20px;
+    }
+
+    .final-story-text {
+      background-color: rgba(255,255,255,0.1);
+      border-radius: 10px;
+      padding: 20px;
+      margin: 20px 0;
+      white-space: pre-wrap;
+      text-align: left;
+      max-height: 300px;
+      overflow-y: auto;
+    }
+
     .story-completed-content {
       background-color: white;
       padding: 20px;
