changed button id to confirm

--- a/webroot/page.html
+++ b/webroot/page.html
@@ -14,7 +14,7 @@
         </div>
         <p id="story"></p>
         <div id="grid"></div>
-        <button id="checkAnswer">Confirm Selection</button>
+        <button id="confirm">Confirm Selection</button>
     </div>
     <script type="application/javascript" src="script.js"></script>
   <style>
