ui changes added assets

--- a/webroot/page.html
+++ b/webroot/page.html
@@ -11,6 +11,7 @@
         <div id="game-round-container">
             <div id="game-round" class="game-round">Round: 1</div>
             <div id="countdown-timer" class="countdown-timer">30</div>
+            <img id="timer-logo" class="timer-logo" alt="Logo" />
         </div>
         <p id="story"></p>
         <div id="grid"></div>
