style: Enhance story text field UI with gamified design and interactive elements

--- a/webroot/page.html
+++ b/webroot/page.html
@@ -15,7 +15,9 @@
                 <div id="countdown-timer" class="countdown-timer">30</div>
             </div>
         </div>
-        <p id="story"></p>
+        <div class="story-container">
+            <p id="story"></p>
+        </div>
         <div id="grid"></div>
         <button id="confirm">Confirm Selection</button>
     </div>
