--- a/webroot/page.html
+++ b/webroot/page.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <div id="toast" class="toast"></div>
     <div id="game-container">
         <div id="game-round-container">
             <div id="game-round" class="game-round">Round: 1</div>
