--- a/webroot/page.html
+++ b/webroot/page.html
@@ -24,6 +24,42 @@
     </div>
     <script type="application/javascript" src="script.js"></script>
   <style>
+    .scroll-container {
+  background: linear-gradient(145deg, #1e1e2f, #34344d); /* Dark gradient background */
+  border: 2px solid #00bcd4; /* Neon-style border */
+  border-radius: 10px; /* Rounded corners */
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.7), 0 0 10px #00bcd4; /* Glow effect */
+  padding: 15px;
+  max-width: 600px; /* Adjust container width */
+  max-height: 300px; /* Limit height */
+
+  overflow-y: auto; /* Enable scrolling for the story */
+  font-family: "Roboto", sans-serif; /* Clean, modern font */
+}
+
+.scroll-header {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  color: #00ffcc; /* Neon text color */
+  text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc; /* Glowing effect */
+  background: rgba(0, 0, 0, 0.8); /* Semi-transparent background for contrast */
+  padding: 10px;
+  border-radius: 8px; /* Rounded edges for the header */
+  margin-bottom: 10px; /* Spacing between header and story text */
+  border: 1px solid #00ffcc; /* Matches the glowing color */
+}
+
+.final-story {
+  color: #fff; /* White text for readability */
+  font-size: 16px;
+  line-height: 1.6; /* Improve readability with spacing */
+  padding: 10px; /* Space around the text */
+  background: rgba(255, 255, 255, 0.1); /* Subtle translucent background */
+  border-radius: 8px; /* Rounded corners */
+  box-shadow: inset 0 0 5px rgba(255, 255, 255, 0.2); /* Inner glow effect */
+  overflow-wrap: break-word; /* Prevent text overflow */
+}
     .timer-container {
       display: flex;
       align-items: center;
@@ -35,8 +71,12 @@
       box-shadow: 0 5px 15px rgba(0,0,0,0.3);
       border: 2px solid rgba(253, 187, 45, 0.5);
     }
-
+    @font-face {
+  font-family: 'arcade';
+  src: url('fonts/ARCADECLASSIC.TTF'); 
+}
     .countdown-timer {
+      font-family: 'arcade', sans-serif;
       font-size: 24px;
       color: #ffffff;
       font-weight: bold;
@@ -82,6 +122,7 @@
     }
 
     .story-completed-content h1 {
+    
       color: #333;
       margin-bottom: 15px;
     }
